fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ html, body {
   position: fixed;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
 }
 
 .App-dark{
